fix badges on mobile

--- a/src/components/AboutMe/badges/badge.module.scss
+++ b/src/components/AboutMe/badges/badge.module.scss
@@ -9,7 +9,7 @@
 
 .badge {
   position: relative;
-  margin: 1.125em 2.25em;
+  margin: 0.125em 1.8em;
   width: 3em;
   height: 4.65em;
   border-radius: 7.5px;
